# nveyetech_camera

./: CMakeLists.txt  run_tests_with_coverage.sh
board_setup_implementation/camera_provisioning/: Makefile  README.md  device_setup.c  set_mac_uboot.c
board_setup_implementation/license_security/: README
board_setup_implementation/license_security/camera/: Makefile  generate_device_csr.c
board_setup_implementation/license_security/camera/openssl/lib/armeabi-v7a/: libssl.so.1.1
board_setup_implementation/license_security/camera/openssl/lib/armeabi-v7a/pkgconfig/: libcrypto.pc  openssl.pc
board_setup_implementation/license_security/rootCerts/: create_root_ca.sh
board_setup_implementation/license_security/rootCerts/certs/: rootCA.key  rootCA.pem
board_setup_implementation/license_security/server/: sign_device_csr.sh  verify_fullchain.sh
factory_reset/: Makefile  README.md  factory_reset.c
gyro_reader/: CMakeLists.txt  fw.cpp  fw.h  gyro_reader.cpp  gyro_reader1.cpp  gyro_reader2.cpp  gyro_reader_working_bob.cpp
m5s_http_server/: CMakeLists.txt  lru.cpp  lru.h  main.cpp  metrics.cpp  metrics.h  motocam_apis_doc.md  net.cpp  net.h  session_manager.cpp  session_manager.h  test_ws.py  websocket_example  websocket_example.c
m5s_http_server/build_agent/: CMakeCache.txt  Makefile  cmake_install.cmake
m5s_http_server/build_vienna/: CMakeCache.txt  Makefile  cmake_install.cmake
m5s_mw_server/: CMakeLists.txt  motocam_api_server.c  motocam_api_server.cpp  socket_client_test.c  socket_client_test.cpp  timer.c  timer.cpp  timer.h
m5s_mw_server/build_vienna/: CMakeCache.txt  Makefile  cmake_install.cmake
motocam_api_libs/: API_GUIDE.md  CMakeLists.txt  DOB_IMPLEMENTATION_SUMMARY.md  DOB_QUICK_REFERENCE.md  DOB_TEST_EXAMPLES.c  DOB_VALIDATION_GUIDE.md  create_m5s_config.sh  motocam_apis_doc.md  stream.ini
motocam_api_libs/build_vienna/: CMakeCache.txt  Makefile  cmake_install.cmake
motocam_api_libs/include/: fw.h  log.h  motocam_api_l1.h  motocam_api_l2.h  motocam_command_enums.h
motocam_api_libs/include/fw/: fw_image.h  fw_network.h
motocam_api_libs/include/l1/: motocam_audio_api_l1.h  motocam_config_api_l1.h  motocam_helper_api_l1.h  motocam_image_api_l1.h  motocam_network_api_l1.h  motocam_streaming_api_l1.h  motocam_system_api_l1.h
motocam_api_libs/include/l2/: motocam_audio_api_l2.h  motocam_config_api_l2.h  motocam_image_api_l2.h  motocam_network_api_l2.h  motocam_streaming_api_l2.h  motocam_system_api_l2.h
motocam_api_libs/src/: fw.cpp  gpio.cpp  motocam_api_l1.c  motocam_api_l1.cpp  motocam_api_l2.c  motocam_api_l2.cpp
motocam_api_libs/src/fw/: fw_helper.cpp  fw_image.cpp  fw_network.cpp  fw_system.cpp
motocam_api_libs/src/l1/: date_validation_helper.c  date_validation_helper.cpp  motocam_audio_api_l1.c  motocam_audio_api_l1.cpp  motocam_config_api_l1.c  motocam_config_api_l1.cpp  motocam_helper_api_l1.c  motocam_helper_api_l1.cpp  motocam_image_api_l1.c  motocam_image_api_l1.cpp  motocam_network_api_l1.c  motocam_network_api_l1.cpp  motocam_streaming_api_l1.c  motocam_streaming_api_l1.cpp  motocam_system_api_l1.c  motocam_system_api_l1.cpp
motocam_api_libs/src/l2/: motocam_audio_api_l2.c  motocam_audio_api_l2.cpp  motocam_config_api_l2.c  motocam_config_api_l2.cpp  motocam_image_api_l2.c  motocam_image_api_l2.cpp  motocam_network_api_l2.c  motocam_network_api_l2.cpp  motocam_streaming_api_l2.c  motocam_streaming_api_l2.cpp  motocam_system_api_l2.c  motocam_system_api_l2.cpp
motocam_fw_libs/: CMakeLists.txt
motocam_fw_libs/include/: fw.h  gpio.h  log.h
motocam_fw_libs/include/fw/: fw_audio.h  fw_image.h  fw_network.h  fw_sensor.h  fw_state_machine.h  fw_streaming.h  fw_system.h
motocam_fw_libs/src/: fw.c  gpio.c  gpio.cpp
motocam_fw_libs/src/fw/: fw_audio.c  fw_helper.c  fw_helper.cpp  fw_image.c  fw_image.cpp  fw_network.c  fw_state_machine.c  fw_streaming.c  fw_streaming.cpp  fw_system.c
new_http_server/: CMakeLists.txt  main.cpp
new_http_server/src/handlers/: auth_handler.cpp  auth_handler.h  device_handler.cpp  device_handler.h  metrics_handler.cpp  metrics_handler.h  provision_handler.cpp  provision_handler.h  proxy_handler.cpp  proxy_handler.h  upload_handler.cpp  upload_handler.h
new_http_server/src/main/: net.cpp  net.h
new_http_server/src/server/: server_config.h  web_server.cpp  web_server.h
new_http_server/src/session/: fifo_queue.cpp  fifo_queue.h  generic_lru.cpp  generic_lru.h  session_manager.cpp  session_manager.h  session_storage.h
new_http_server/src/utils/: http_utils.cpp  http_utils.h
ota/package_verification_and_installation/: README.md  steps-to-do.txt
ota/package_verification_and_installation/camera-side/: Makefile  ota_handler.c  ota_handler.h  ota_service.c  post_ota_support.c  verify_ota.c
ota/package_verification_and_installation/camera-side/openssl/include/openssl/: opensslconf.h
ota/package_verification_and_installation/camera-side/openssl/lib/armeabi-v7a/: libcrypto.so.1.1
ota/package_verification_and_installation/camera-side/openssl/lib/armeabi-v7a/pkgconfig/: libssl.pc
ota/package_verification_and_installation/camera-side/unit_test/: version_check_test.c
ota/package_verification_and_installation/certs/: generate_keys.sh  private.pem  public.pem
ota/package_verification_and_installation/web-side/: Makefile  ota_packager  ota_packager.c
tests/: CMakeLists.txt  test_board_setup.cpp  test_factory_reset.cpp  test_m5s_mw_server.cpp  test_motocam_api_libs.cpp  test_motocam_fw_libs.cpp
tests/mocks/: mock_fw_api.c  mock_fw_control.h  mock_fw_extra.h  mock_hw.c  mock_hw.h
